--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
   "license": "MIT",
   "dependencies": {
     "@ark-ui/solid": "^4.5.1",
+    "@kobalte/core": "^0.13.7",
     "@tanstack/solid-query": "^5.60.6",
+    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-deep-link": "~2",
     "@tauri-apps/plugin-fs": "~2.0.2",
+    "@tauri-apps/plugin-shell": "^2.0.1",
+    "@tauri-apps/plugin-store": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ofetch": "^1.4.1",
     "solid-js": "^1.9.3",
-    "@tauri-apps/api": "^2.1.1",
-    "@tauri-apps/plugin-shell": "^2.0.1"
+    "tailwind-merge": "^2.5.5",
+    "unocss-preset-animations": "^1.1.0"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.1",
+    "@tauri-apps/cli": "^2.1.0",
+    "@types/node": "^22.9.3",
     "@unocss/preset-icons": "^0.64.1",
     "typescript": "^5.6.3",
     "unocss": "^0.64.1",
     "vite": "^5.4.11",
-    "vite-plugin-solid": "^2.10.2",
-    "@tauri-apps/cli": "^2.1.0"
+    "vite-plugin-solid": "^2.10.2"
   }
 }
